--- a/qa_technical_assignment/package.json
+++ b/qa_technical_assignment/package.json
@@ -1,20 +1,21 @@
 {
   "dependencies": {
-    "axios": "^1.2.4",
-    "chai": "^4.3.7",
-    "cypress": "^11.1.0",
-    "mocha": "^10.2.0"
+    "cypress": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/eslint-parser": "^7.5.4",
+    "@playwright/test": "^1.43.1",
+    "axios": "^1.11.0",
+    "chai": "^5.2.1",
     "cypress": "^11.1.0",
     "dotenv": "^16.0.3",
-    "@playwright/test": "^1.43.1"
+    "mocha": "^11.7.1"
   },
   "scripts": {
     "cypress": "npx cypress open --config viewportWidth=1920,viewportHeight=1080",
     "playwright": "npx playwright test --ui",
-    "backend": "mocha backend/tests"
+    "backend": "mocha backend/tests",
+    "test": "mocha"
   }
 }
